Realize el portfolio y avance con contact

--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,21 @@
-<!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+
+  <div style="height: 100px; width: 50%; margin-left: 25%;">
+    
+    <div class="h-50 w-100 d-inline-block" style="width: 120px;"> <form>
+        <div class="mb-3">
+            <label class="info-label">Nombre:</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="You e-mail" >
+          
+        </div>
+        <div class="mb-3">
+          
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+       
+        <button type="submit" class="btn btn-primary" style="float: right;">Submit</button>
+      </form></div>
+      <div clase="item">
+        <span>nombre:</span>
+        <input type="text" name="nombre" class="finp">
+        </div>
+  </div>
