--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,29 @@
-<!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<div>
+    <h1>Porfolio</h1>
+    <p>orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+</div>
+
+<div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="http://cdnitesm.azureedge.net/miespacio-guia-de-estilos/img/300x200.gif" class="card-img-top" alt="...">
+        <h3 style="color: blue;">Project Name</h3>
+        <p>orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="http://cdnitesm.azureedge.net/miespacio-guia-de-estilos/img/300x200.gif" class="card-img-top" alt="...">
+        <h3 style="color: blue;">Project Name</h3>
+        <p>orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="http://cdnitesm.azureedge.net/miespacio-guia-de-estilos/img/300x200.gif" class="card-img-top" alt="...">
+        <h3 style="color: blue;">Project Name</h3>
+        <p>orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+      </div>
+    </div>
+  
+  </div>
