--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,10 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<div class="container" style="background-color: white;">
+    <div class="row" style="margin-top:20px ;">
+        <div class="col" style="margin: 54px;"> <h2>The first heading <strong style="color:rgb(129, 127, 127);">Will Catch your eye</strong></h2>
+    <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent
+        commodo cursus magna, vel scelerisque nisl consecteur. Fusce dapibus, tellus ac cursus commodo</p></div>
+        
+        <div class="rounded"><img src="http://www.estudiompi.com.ar/wp-content/uploads/PERSONAJES-VECTORIALES-DE-STANLEY-CHOW4.jpg" style="width: 226px; "  class="img-thumbnail" alt="..."></div>
+   </div>
+</div>
