--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,21 +1,24 @@
 <!-- your html code here -->
 <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style=" color:white;">Start Booststrap</a>
+      <a class="navbar-brand" href="#" style=" color:rgb(152, 148, 148)">Start Booststrap</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#" style=" color:white;">About</a>
+            <a class="nav-link active" aria-current="page" href="#" style=" color:rgb(152, 148, 148);">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style=" color:white;">Services</a>
+            <a class="nav-link" href="#" style=" color:rgb(152, 148, 148)">Services</a>
           </li>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style=" color:white;">Portafolio</a>
+            <a class="nav-link" style=" color:rgb(152, 148, 148);">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style=" color:rgb(152, 148, 148);">Contact</a>
           </li>
         </ul>
           
