--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,1 +1,16 @@
 <!-- your html code here -->
+<div class="container" style="background-color: white;">
+    <div class="row" style="margin-top:20px ;">
+        <div class="col" style="margin: auto; display: flex; justify-content: space-around;"><img
+                src="https://www.puravida-software.com/images/portfolio-3.jpg"
+                style="width: 275px; height: 275px; border-radius: 140px ;" class="" alt="..."></div>
+        <div class="col" style="margin: 54px;">
+            <h2>The Second heading <strong style="color:rgb(129, 127, 127);">Is Pretty Cool Too.</strong></h2>
+            <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper.
+                Praesent
+
+                commodo cursus magna, vel scelerisque nisl consecteur. Fusce dapibus, tellus ac cursus commodo</p>
+        </div>
+
+    </div>
+</div>
