--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,21 +1,32 @@
+<br>
+<div style="background-color: white; width: 1325px; margin: auto; ">
+  <h1>Contact</h1>
+  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 
-  <div style="height: 100px; width: 50%; margin-left: 25%;">
-    
-    <div class="h-50 w-100 d-inline-block" style="width: 120px;"> <form>
-        <div class="mb-3">
-            <label class="info-label">Nombre:</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="You e-mail" >
+  <div style="height: 250px; width: 50%; margin-left: 25%;"> 
+    <div class="h-50 w-100 d-inline-block" style="width: 150px;"> 
+      <form div class="bg-light" style="height: 200px; width: 800px;" >
+        <div class="form-group row" >
+          <label for="inputEmail3" class="col-sm-2 col-form-label"><b>Your E-mail</b></label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputPassword3" class="col-sm-2 col-form-label"><b>Your message</b></label>
+          <div class="col-sm-10">
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Please enter your message here" ></textarea>
+            <br>
+            <div class="col-sm-10">
+              <button type="submit" class="btn btn-primary btn-lg" style="float: right; margin-right: -89px; " >Submit</button>
+            </div>
+          </div>
           
+        
+          </div>
         </div>
-        <div class="mb-3">
-          
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-       
-        <button type="submit" class="btn btn-primary" style="float: right;">Submit</button>
-      </form></div>
-      <div clase="item">
-        <span>nombre:</span>
-        <input type="text" name="nombre" class="finp">
-        </div>
+      </form>
+    </div>
   </div>
+
+    
