--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
-    <div class="row">
+    <div class="row" style="width: 1325px; margin: auto; text-align: left; background-color: white;">
         <div class="col-lg-12">
-            <p>Copyright &copy; Your Website Name 2021</p>
+            <p> <b>Copyright &copy; Part-time27</b> </p>
         </div>
     </div>
 </footer>
