--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,9 +1,11 @@
-<div>
+<br>
+<div style="width: 1325px; margin: auto; background: white; ">
+  <br>
     <h1>Porfolio</h1>
     <p>orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-</div>
 
-<div class="row row-cols-1 row-cols-md-3 g-4">
+
+<div  style="width: 1325px; margin: auto; background: white;" class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
         <img src="http://cdnitesm.azureedge.net/miespacio-guia-de-estilos/img/300x200.gif" class="card-img-top" alt="...">
@@ -25,5 +27,5 @@
         <p>orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
       </div>
     </div>
-  
+  </div>
   </div>
