Termino de contact y portfolio

--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,7 +1,10 @@
 <br>
 <div style="background-color: white; width: 1325px; margin: auto; ">
-  <h1>Contact</h1>
-  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+  <div  class="container-sm">
+    <h1 style="margin-left: 50px;">Contact</h1>
+    <p style="margin-left: 50px;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+  </div>
+  
 
   <div style="height: 250px; width: 50%; margin-left: 25%;"> 
     <div class="h-50 w-100 d-inline-block" style="width: 150px;"> 
