--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,8 +1,11 @@
 <br>
 <div style="width: 1325px; margin: auto; background: white; ">
   <br>
-    <h1>Porfolio</h1>
-    <p>orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+  <div class="container-sm">
+    <h1 style="margin-left: 50px;">Porfolio</h1>
+    <p style="margin-left: 50px;">orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+  </div>
+    
 
 
 <div  style="width: 1325px; margin: auto; background: white;" class="row row-cols-1 row-cols-md-3 g-4">
