--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,6 +1,6 @@
 <!-- your html code here -->
 <div class="container" style="background-color: white;">
-    <div class="row" style="margin-top:20px ;">
+    <div class="row" style="margin-top:20px; height: 340px;">
         <div class="col" style="margin: 54px;">
             <h2>The first heading <strong style="color:rgb(129, 127, 127);">Will Catch your eye</strong></h2>
             <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper.
