--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,6 +1,6 @@
 <!-- your html code here -->
 <div class="container" style="background-color: white;">
-    <div class="row" style="margin-top:20px ;">
+    <div class="row" style="margin-top:20px ;height: 340px;">
         <div class="col" style="margin: auto; display: flex; justify-content: space-around;"><img
                 src="https://www.puravida-software.com/images/portfolio-3.jpg"
                 style="width: 275px; height: 275px; border-radius: 140px ;" class="" alt="..."></div>
