--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -3,7 +3,7 @@
   <br>
   <div class="container-sm">
     <h1 style="margin-left: 50px;">Porfolio</h1>
-    <p style="margin-left: 50px;">orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+    <p style="margin-left: 50px;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
   </div>
     
 
@@ -13,21 +13,21 @@
       <div class="card h-100">
         <img src="http://cdnitesm.azureedge.net/miespacio-guia-de-estilos/img/300x200.gif" class="card-img-top" alt="...">
         <h3 style="color: blue;">Project Name</h3>
-        <p>orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
       </div>
     </div>
     <div class="col">
       <div class="card h-100">
         <img src="http://cdnitesm.azureedge.net/miespacio-guia-de-estilos/img/300x200.gif" class="card-img-top" alt="...">
         <h3 style="color: blue;">Project Name</h3>
-        <p>orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
       </div>
     </div>
     <div class="col">
       <div class="card h-100">
         <img src="http://cdnitesm.azureedge.net/miespacio-guia-de-estilos/img/300x200.gif" class="card-img-top" alt="...">
         <h3 style="color: blue;">Project Name</h3>
-        <p>orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
       </div>
     </div>
   </div>
