--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -5,7 +5,7 @@
 height: 79vh; margin-top:12px;">
   
     <div class="position-absolute top-50 start-50 translate-middle">
-        <h1 style="background: rgb(219, 208, 208); width: 1300px; text-align: center; font-size: 81px;"> One</h1>
+        <h1 style="background: rgb(219, 208, 208); width: 1300px; text-align: center; font-size: 81px;">One Page Wonder </h1>
         <h2 style="background: rgb(219, 208, 208); width: 1300px; text-align: center; font-size: 41px;"> Will Knock Your Socks Off</h2>
     
     </div>
